# shai_hulud_scanner

./: .gitignore  README.md  SEMVER_HANDLING.md  convert_tenable_to_semgrep.py  orgs.example.txt  pyproject.toml  repos.example.txt  test_semver.py
examples/: compromised-libs.csv  compromised-libs.txt
lists/: tenable_semgrep_format.txt
src/shai_hulud_scanner/: __init__.py  __main__.py  branch_scanner.py  branches.py  cli.py  local_scanner.py  models.py  output.py  package_fetcher.py  scanner.py  semver.py
