[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shai-hulud-scanner"
version = "0.1.0"
description = "Scan GitHub organizations for compromised npm packages"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["security", "npm", "github", "supply-chain", "scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
shai-hulud-scanner = "shai_hulud_scanner.cli:main"

[project.urls]
Repository = "https://github.com/your-org/shai-hulud-scanner"

[tool.hatch.build.targets.wheel]
packages = ["src/shai_hulud_scanner"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
